# mangamanager

./: .gitIgnore  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CommandManager.cpp  CommandManager.h  Makefile  MangaUpdates.cbp  MangaUpdatesTest[1]_include.cmake  PKGBUILD  README.md  cmake_install.cmake  install.sh  main.cpp
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-c6dca08cd64fd4757fb9.json  cmakeFiles-v1-a7b954f5fa0c2354e469.json  codemodel-v2-0bfa1cdde351c171f5e7.json  directory-_deps.googletest-build.googlemock-Debug-e221e9a7022ea833ff76.json  directory-_deps.googletest-build.googletest-Debug-0f2df1a02e12319f99bc.json  index-2023-10-17T15-19-09-0680.json  target-MangaUpdates-Debug-ec221eeeec9ac1853aef.json  target-MangaUpdatesTest-Debug-a11f9c16fe8e88fd670e.json  target-gmock-Debug-288f137845fdfcf600ad.json  target-gmock_main-Debug-2928d0e3ee8ddbb88b63.json  target-gtest-Debug-592c57897425f211ed4c.json  target-gtest_main-Debug-f9baf4095b497a2ae9b0.json
MangaManager/: CommandManager.cpp
MangaManager/commands/: BaseCommand.cpp  BaseCommand.h  SetCommand.cpp
MangaManager/utils/: CSVGateway.cpp  CSVGateway.h
commands/: LatestCommand.h  SetCommand.cpp  SetCommand.h
pkg/: PKGBUILD
src/: CommandManager.cpp  CommandManager.h  main.cpp
src/commands/: AddCommand.cpp  AddCommand.h  CreateCollectionCommand.cpp  CreateCollectionCommand.h  HelpCommand.cpp  HelpCommand.h  LatestCommand.cpp  SetCommand.cpp  SetCommand.h
src/commands/abstract/: BaseCommand.h  BaseCommandManager.cpp  BaseCommandManager.h
src/commands/depricated/: AddCommand.cpp  AddCommand.h  HelpCommand.cpp  HelpCommand.h  LatestCommand.cpp  LatestCommand.h
src/utils/: CSVGateway.h  Config.cpp  Config.h  MangaUpdatesGateway.cpp  MangaUpdatesGateway.h  Memory.cpp  VolumeRange.cpp  VolumeRange.h
test/: CommandManagerTest.cpp
test/testFiles/: TestConfig1.conf
test/utils/: CSVGatewayTest.cpp  ConfigTest.cpp  MangaUpdatesGatewayTest.cpp  VolumeRangeTest.cpp  cleanup.cpp  cleanup.h
utils/: CSVGateway.cpp  CSVGateway.h  MangaUpdatesGateway.cpp  MangaUpdatesGateway.h  Memory.h
vault/Window/: Frame.cpp  Frame.h
